# devto-brightdata-scraping

./: .gitignore  .tool-versions  DOCS.md  README.md  pyproject.toml
notebooks/: eda-clustering.ipynb  eda-llm-extraction.ipynb  eda-prices.ipynb  lkpp-cleaning.ipynb  lkpp-extract-terms.ipynb  proc-filter.ipynb  proc-merge.ipynb  proc-specs.ipynb
scripts/: extract_llm.py  scrape_api.py  scrape_browser.py
scripts/magic/: extractor.py  extras.py
web/: app.py  cluster.py  compare_price.py  dashboard.py  extras.py  keywords.py  requirements.in  requirements.txt
