[project]
name = "devto-brightdata-scraping"
version = "0.1.0"
description = "Bright Data Web Scraping Hackathon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Math and Data
    "numpy>=2.2.0",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "pydantic>=2.10.3",
    # Machine Learning and LLM
    "nltk>=3.9.1",
    "dspy>=2.5.43",
    "ollama>=0.4.4",
    "mlflow>=2.19.0",
    "scikit-learn>=1.6.0",
    # Notebooks and Visualization
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.5",
    "streamlit>=1.41.1",
    "matplotlib>=3.10.0",
    # Web Scraping
    "requests>=2.32.3",
    "playwright>=1.49.1",
    # Utilities
    "tqdm>=4.67.1",
    "babel>=2.16.0",
    "nbformat>=5.10.4",
]

[dependency-groups]
dev = [
    # Utilities
    "ruff>=0.8.3",
]
